# github-client

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md  RELEASE-DESC.txt  desc.txt  main.cpp  main.py  requirements.txt
.github/workflows/: build.yml
api/: github_api.cpp  github_api.h  github_api.py
gui/: github_ui.cpp  github_ui.h  github_ui.py  local_asset_handler.h
i18n/: translations.cpp  translations.h  translations.py
packaging/: GitHubClient.wxs
resources/: homepage.html  login.html  resources.qrc  signup.html
resources/github_files/: 16928-de523fd530a191d4.js  2183-c1c8fbe0eb6983f6.js  28891-64f5321043bdc219.js  35415-af868d70a4a5c55d.js  3750-3ae2aba791d21f36.js  40067-473aba37d6af82b9.js  43831-021caaf8cc95cceb.js  47166-dacb7d3f062b12bb.js  48761-f39bf003aa06067a.js  57999-f3a02cd9521c54c1.js  57999.8dee77aa8ae13650.module.css  62684-4ba3a822900bc44b.js  6948-2c6b129e43a8b21e.js  70641-b188c45beab26bb5.js  7309.b88b7e8bc2fe45e1.module.css  7511-377232bb8d73bd83.js  87649-185e26ee72d73df4.js  91951-23c6e4219d3512f2.js  97323-6f93af2c716f4e95.js  99251-42bcac07557fae8e.js  dark_colorblind-46654068ac8d8b19.css  dark_colorblind_high_contrast-ce6091c5adfeb70f.css  dark_dimmed-6199d2c64677af2d.css  dark_dimmed_high_contrast-a8e662a03107fa71.css  dark_tritanopia-a1584556afb3c856.css  dark_tritanopia_high_contrast-f48b2521c34c41b6.css  element-registry-90c34d6e0cdf8c4f.js  global-banner-disable-f48c4c0fd4ae5561.js  (+20 more)
utils/: browser_cookies.cpp  browser_cookies.h  browser_cookies.py  test_cookie_extractor.cpp  test_cookie_extractor.py
